Fix icon alignment

--- a/styles/Icon.module.css
+++ b/styles/Icon.module.css
@@ -1,5 +1,6 @@
 .icon {
-  vertical-align: sub;
+  line-height: 1;
+  vertical-align: middle;
 }
 
 .bootstrapIcon {
